--- a/docs-ref-autogen/azure-iot-common/CloudToDeviceDetachedError.yml
+++ b/docs-ref-autogen/azure-iot-common/CloudToDeviceDetachedError.yml
@@ -42,7 +42,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: Error innerError
+      content: 'innerError: Error'
       return:
         type:
           - Error
@@ -56,7 +56,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: static ErrorConstructor Error
+      content: 'static Error: ErrorConstructor'
       return:
         type:
           - ErrorConstructor
