--- a/docs-ref-autogen/azure-iot-device/DeviceMethodResponse.yml
+++ b/docs-ref-autogen/azure-iot-device/DeviceMethodResponse.yml
@@ -52,7 +52,7 @@ items:
     type: property
     summary: Boolean indicating whether the response has been sent already.
     syntax:
-      content: boolean isResponseComplete
+      content: 'isResponseComplete: boolean'
       return:
         type:
           - boolean
@@ -66,7 +66,7 @@ items:
     type: property
     summary: 'The payload of the response, sent back to the caller on the service side.'
     syntax:
-      content: any payload
+      content: 'payload: any'
       return:
         type:
           - any
@@ -82,7 +82,7 @@ items:
       The request identifier supplied by the service for this device method
       call.
     syntax:
-      content: string requestId
+      content: 'requestId: string'
       return:
         type:
           - string
@@ -98,7 +98,7 @@ items:
       Status code indicating whether the method succeeded (200) or not (any
       other number that is not 200).
     syntax:
-      content: number status
+      content: 'status: number'
       return:
         type:
           - number
