--- a/docs-ref-autogen/azure-iot-device/SharedAccessSignatureAuthenticationProvider.yml
+++ b/docs-ref-autogen/azure-iot-device/SharedAccessSignatureAuthenticationProvider.yml
@@ -43,7 +43,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: AuthenticationType type
+      content: 'type: AuthenticationType'
       return:
         type:
           - AuthenticationType
