--- a/docs-ref-autogen/azure-iot-mqtt-base/MqttBase.TransportConfig.yml
+++ b/docs-ref-autogen/azure-iot-mqtt-base/MqttBase.TransportConfig.yml
@@ -26,7 +26,7 @@ items:
     summary: ''
     optional: true
     syntax:
-      content: boolean clean
+      content: 'clean?: boolean'
       return:
         type:
           - boolean
@@ -40,7 +40,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string deviceId
+      content: 'deviceId: string'
       return:
         type:
           - string
@@ -54,7 +54,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string host
+      content: 'host: string'
       return:
         type:
           - string
@@ -69,7 +69,7 @@ items:
     summary: ''
     optional: true
     syntax:
-      content: string | SharedAccessSignature sharedAccessSignature
+      content: 'sharedAccessSignature?: string | SharedAccessSignature'
       return:
         type:
           - string | SharedAccessSignature
@@ -84,7 +84,7 @@ items:
     summary: ''
     optional: true
     syntax:
-      content: string username
+      content: 'username?: string'
       return:
         type:
           - string
@@ -99,7 +99,7 @@ items:
     summary: ''
     optional: true
     syntax:
-      content: X509 x509
+      content: 'x509?: X509'
       return:
         type:
           - X509
