--- a/docs-ref-autogen/azure-iot-provisioning-device/RegistrationRequest.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/RegistrationRequest.yml
@@ -24,7 +24,7 @@ items:
     summary: true to foce re-registration
     optional: true
     syntax:
-      content: boolean forceRegistration
+      content: 'forceRegistration?: boolean'
       return:
         type:
           - boolean
@@ -38,7 +38,7 @@ items:
     type: property
     summary: ID scope for the provisioning instance
     syntax:
-      content: string idScope
+      content: 'idScope: string'
       return:
         type:
           - string
@@ -52,7 +52,7 @@ items:
     type: property
     summary: global device endpoint for the provisioning service
     syntax:
-      content: string provisioningHost
+      content: 'provisioningHost: string'
       return:
         type:
           - string
@@ -69,7 +69,7 @@ items:
       registration
     optional: true
     syntax:
-      content: string registrationId
+      content: 'registrationId?: string'
       return:
         type:
           - string
