--- a/docs-ref-autogen/azure-iot-provisioning-service/QuerySpecification.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/QuerySpecification.yml
@@ -20,7 +20,7 @@ items:
     type: property
     summary: The query.
     syntax:
-      content: string query
+      content: 'query: string'
       return:
         type:
           - string
