--- a/docs-ref-autogen/azure-iot-provisioning-service/X509Attestation.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/X509Attestation.yml
@@ -24,7 +24,7 @@ items:
       Primary and secondary CA reference.  These will be names rather than
       actual certificates.
     syntax:
-      content: X509CAReferences caReferences
+      content: 'caReferences: X509CAReferences'
       return:
         type:
           - '@azure-iot-provisioning-service.X509CAReferences'
@@ -40,7 +40,7 @@ items:
       x509 certificate object which provides all information for a leaf
       certificate.
     syntax:
-      content: X509Certificates clientCertificates
+      content: 'clientCertificates: X509Certificates'
       return:
         type:
           - '@azure-iot-provisioning-service.X509Certificates'
@@ -58,7 +58,7 @@ items:
 
       suitable for signing other certificates.
     syntax:
-      content: X509Certificates signingCertificates
+      content: 'signingCertificates: X509Certificates'
       return:
         type:
           - '@azure-iot-provisioning-service.X509Certificates'
