--- a/docs-ref-autogen/azure-iot-common/AuthenticationProvider.yml
+++ b/docs-ref-autogen/azure-iot-common/AuthenticationProvider.yml
@@ -25,7 +25,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: AuthenticationType type
+      content: 'type: AuthenticationType'
       return:
         type:
           - '@azure-iot-common.AuthenticationType'
