--- a/docs-ref-autogen/azure-iot-common/IotHubNotFoundError.yml
+++ b/docs-ref-autogen/azure-iot-common/IotHubNotFoundError.yml
@@ -39,7 +39,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: static ErrorConstructor Error
+      content: 'static Error: ErrorConstructor'
       return:
         type:
           - ErrorConstructor
