--- a/docs-ref-autogen/azure-iot-common/Properties.yml
+++ b/docs-ref-autogen/azure-iot-common/Properties.yml
@@ -38,7 +38,7 @@ items:
       ]
       ```
     syntax:
-      content: 'any[] propertyList'
+      content: 'propertyList: any[]'
       return:
         type:
           - 'any[]'
