--- a/docs-ref-autogen/azure-iot-common/ThrottlingError.yml
+++ b/docs-ref-autogen/azure-iot-common/ThrottlingError.yml
@@ -43,7 +43,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: static ErrorConstructor Error
+      content: 'static Error: ErrorConstructor'
       return:
         type:
           - ErrorConstructor
