--- a/docs-ref-autogen/azure-iot-common/TransportConfig.yml
+++ b/docs-ref-autogen/azure-iot-common/TransportConfig.yml
@@ -27,7 +27,7 @@ items:
     type: property
     summary: Device unique identifier.
     syntax:
-      content: string deviceId
+      content: 'deviceId: string'
       return:
         type:
           - string
@@ -41,7 +41,7 @@ items:
     type: property
     summary: Hostname of the Azure IoT hub instance.
     syntax:
-      content: string host
+      content: 'host: string'
       return:
         type:
           - string
@@ -56,7 +56,7 @@ items:
     summary: Shared access key is used to sign security tokens.
     optional: true
     syntax:
-      content: string sharedAccessKey
+      content: 'sharedAccessKey?: string'
       return:
         type:
           - string
@@ -73,7 +73,7 @@ items:
       tokens.
     optional: true
     syntax:
-      content: string sharedAccessKeyName
+      content: 'sharedAccessKeyName?: string'
       return:
         type:
           - string
@@ -90,7 +90,7 @@ items:
       token-based authentication is used.
     optional: true
     syntax:
-      content: string sharedAccessSignature
+      content: 'sharedAccessSignature?: string'
       return:
         type:
           - string
@@ -107,7 +107,7 @@ items:
       and authenticate with the Azure IoT hub instance.
     optional: true
     syntax:
-      content: X509 x509
+      content: 'x509?: X509'
       return:
         type:
           - '@azure-iot-common.X509'
