--- a/docs-ref-autogen/azure-iot-device-http/HttpReceiverOptions.yml
+++ b/docs-ref-autogen/azure-iot-device-http/HttpReceiverOptions.yml
@@ -48,7 +48,7 @@ items:
       specific time.
     optional: true
     syntax:
-      content: Date at
+      content: 'at?: Date'
       return:
         type:
           - Date
@@ -63,7 +63,7 @@ items:
     summary: Use a cron-formatted string
     optional: true
     syntax:
-      content: string cron
+      content: 'cron?: string'
       return:
         type:
           - string
@@ -80,7 +80,7 @@ items:
       messages should be drained.
     optional: true
     syntax:
-      content: boolean drain
+      content: 'drain?: boolean'
       return:
         type:
           - boolean
@@ -95,7 +95,7 @@ items:
     summary: Interval **in seconds** at which the Azure IoT hub is going to be polled.
     optional: true
     syntax:
-      content: number interval
+      content: 'interval?: number'
       return:
         type:
           - number
@@ -110,7 +110,7 @@ items:
     summary: Does not poll and instead rely on the user calling the `receive` method.
     optional: true
     syntax:
-      content: boolean manualPolling
+      content: 'manualPolling?: boolean'
       return:
         type:
           - boolean
