--- a/docs-ref-autogen/azure-iot-device/DeviceMethodRequest.yml
+++ b/docs-ref-autogen/azure-iot-device/DeviceMethodRequest.yml
@@ -54,7 +54,7 @@ items:
     type: property
     summary: The name of the method to be called.
     syntax:
-      content: string methodName
+      content: 'methodName: string'
       return:
         type:
           - string
@@ -68,7 +68,7 @@ items:
     type: property
     summary: A Node `Buffer` representing the payload of the method call request.
     syntax:
-      content: any payload
+      content: 'payload: any'
       return:
         type:
           - any
@@ -84,7 +84,7 @@ items:
       The request identifier supplied by the service for this device method
       call.
     syntax:
-      content: string requestId
+      content: 'requestId: string'
       return:
         type:
           - string
