--- a/docs-ref-autogen/azure-iot-device/SharedAccessKeyAuthenticationProvider.yml
+++ b/docs-ref-autogen/azure-iot-device/SharedAccessKeyAuthenticationProvider.yml
@@ -38,7 +38,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: AuthenticationType type
+      content: 'type: AuthenticationType'
       return:
         type:
           - AuthenticationType
