--- a/docs-ref-autogen/azure-iot-provisioning-device/TpmRegistrationInfo.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/TpmRegistrationInfo.yml
@@ -22,7 +22,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string endorsementKey
+      content: 'endorsementKey: string'
       return:
         type:
           - string
@@ -36,7 +36,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: RegistrationRequest request
+      content: 'request: RegistrationRequest'
       return:
         type:
           - '@azure-iot-provisioning-device.RegistrationRequest'
@@ -50,7 +50,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string storageRootKey
+      content: 'storageRootKey: string'
       return:
         type:
           - string
