--- a/docs-ref-autogen/azure-iot-provisioning-service/BulkEnrollmentOperationError.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/BulkEnrollmentOperationError.yml
@@ -25,7 +25,7 @@ items:
       The status code that is associated with the error for a particular CRUD
       operation.
     syntax:
-      content: number errorCode
+      content: 'errorCode: number'
       return:
         type:
           - number
@@ -41,7 +41,7 @@ items:
       The helpful text associated with the error for a particular CRUD
       operation.
     syntax:
-      content: string errorStatus
+      content: 'errorStatus: string'
       return:
         type:
           - string
@@ -57,7 +57,7 @@ items:
       The id of the the IndividualEnrollment object that was in error during a
       runBulkEnrollmentOperation invocation.
     syntax:
-      content: string registrationId
+      content: 'registrationId: string'
       return:
         type:
           - string
