--- a/docs-ref-autogen/azure-iot-provisioning-service/InitialTwin.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/InitialTwin.yml
@@ -21,7 +21,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: function properties
+      content: 'properties: function'
       return:
         type:
           - function
@@ -35,7 +35,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: TwinCollection tags
+      content: 'tags: TwinCollection'
       return:
         type:
           - '@azure-iot-provisioning-service.TwinCollection'
