--- a/docs-ref-autogen/azure-iot-provisioning-service/Query.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/Query.yml
@@ -40,7 +40,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string continuationToken
+      content: 'continuationToken: string'
       return:
         type:
           - string
@@ -54,7 +54,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: boolean hasMoreResults
+      content: 'hasMoreResults: boolean'
       return:
         type:
           - boolean
