--- a/docs-ref-autogen/azure-iot-provisioning-service/QueryResult.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/QueryResult.yml
@@ -21,8 +21,8 @@ items:
     summary: 'The query result items, as a collection.'
     syntax:
       content: >-
-        Array<IndividualEnrollment | EnrollmentGroup | DeviceRegistrationState>
-        items
+        items: Array<IndividualEnrollment | EnrollmentGroup |
+        DeviceRegistrationState>
       return:
         type:
           - >-
