--- a/docs-ref-autogen/azure-iot-provisioning-service/TpmAttestation.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/TpmAttestation.yml
@@ -31,7 +31,7 @@ items:
 
       The endorsement key is a base64 encoded value.
     syntax:
-      content: string endorsementKey
+      content: 'endorsementKey: string'
       return:
         type:
           - string
@@ -63,7 +63,7 @@ items:
 
       The storageRootKey is a base64 encoded value.
     syntax:
-      content: string storageRootKey
+      content: 'storageRootKey: string'
       return:
         type:
           - string
