--- a/docs-ref-autogen/azure-iot-provisioning-service/X509CAReferences.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/X509CAReferences.yml
@@ -21,7 +21,7 @@ items:
     type: property
     summary: The name of the primary CA certificate.
     syntax:
-      content: string primary
+      content: 'primary: string'
       return:
         type:
           - string
@@ -35,7 +35,7 @@ items:
     type: property
     summary: The name of the secondary CA certificate.
     syntax:
-      content: string secondary
+      content: 'secondary: string'
       return:
         type:
           - string
