--- a/docs-ref-autogen/azure-iot-provisioning-service/X509Certificates.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/X509Certificates.yml
@@ -23,7 +23,7 @@ items:
       Would typically be the certificate used to provide the identification
       and authentication for an enrollment.
     syntax:
-      content: X509CertificateWithInfo primary
+      content: 'primary: X509CertificateWithInfo'
       return:
         type:
           - '@azure-iot-provisioning-service.X509CertificateWithInfo'
@@ -40,7 +40,7 @@ items:
       and authentication for an enrollment in the case that the primary is
       revoked.
     syntax:
-      content: X509CertificateWithInfo secondary
+      content: 'secondary: X509CertificateWithInfo'
       return:
         type:
           - '@azure-iot-provisioning-service.X509CertificateWithInfo'
