--- a/docs-ref-autogen/azure-iothub/Device.X509Thumbprints.yml
+++ b/docs-ref-autogen/azure-iothub/Device.X509Thumbprints.yml
@@ -22,7 +22,7 @@ items:
     summary: ''
     optional: true
     syntax:
-      content: string primaryThumbprint
+      content: 'primaryThumbprint?: string'
       return:
         type:
           - string
@@ -37,7 +37,7 @@ items:
     summary: ''
     optional: true
     syntax:
-      content: string secondaryThumbprint
+      content: 'secondaryThumbprint?: string'
       return:
         type:
           - string
