--- a/docs-ref-autogen/azure-iothub/Device.yml
+++ b/docs-ref-autogen/azure-iothub/Device.yml
@@ -68,7 +68,7 @@ items:
     summary: Contains the symmetric keys used to authenticate this device.
     optional: true
     syntax:
-      content: Authentication authentication
+      content: 'authentication?: Authentication'
       return:
         type:
           - '@azure-iothub.Device.Authentication'
@@ -83,7 +83,7 @@ items:
     summary: Number of c2d messages waiting to by delivered to the device.
     optional: true
     syntax:
-      content: string cloudToDeviceMessageCount
+      content: 'cloudToDeviceMessageCount?: string'
       return:
         type:
           - string
@@ -109,7 +109,7 @@ items:
       feature of your hub.
     optional: true
     syntax:
-      content: ConnectionState connectionState
+      content: 'connectionState?: ConnectionState'
       return:
         type:
           - ConnectionState
@@ -124,7 +124,7 @@ items:
     summary: Timestamp representing the last time `connectionState` changed.
     optional: true
     syntax:
-      content: string connectionStateUpdatedTime
+      content: 'connectionStateUpdatedTime?: string'
       return:
         type:
           - string
@@ -140,7 +140,7 @@ items:
       Unique device identifier as it exists in the Azure IoT hub device
       registry.
     syntax:
-      content: string deviceId
+      content: 'deviceId: string'
       return:
         type:
           - string
@@ -155,7 +155,7 @@ items:
     summary: Weak entity tag assigned to this device identity description
     optional: true
     syntax:
-      content: string etag
+      content: 'etag?: string'
       return:
         type:
           - string
@@ -172,7 +172,7 @@ items:
       same `deviceId`
     optional: true
     syntax:
-      content: string generationId
+      content: 'generationId?: string'
       return:
         type:
           - string
@@ -189,7 +189,7 @@ items:
       message, or received a message.
     optional: true
     syntax:
-      content: string lastActivityTime
+      content: 'lastActivityTime?: string'
       return:
         type:
           - string
@@ -206,7 +206,7 @@ items:
       'disabled'.
     optional: true
     syntax:
-      content: DeviceStatus status
+      content: 'status?: DeviceStatus'
       return:
         type:
           - DeviceStatus
@@ -221,7 +221,7 @@ items:
     summary: 128-character string set when the device is disabled.
     optional: true
     syntax:
-      content: string statusReason
+      content: 'statusReason?: string'
       return:
         type:
           - string
@@ -236,7 +236,7 @@ items:
     summary: Timestamp representing the last time `status` changed.
     optional: true
     syntax:
-      content: string statusUpdatedTime
+      content: 'statusUpdatedTime?: string'
       return:
         type:
           - string
