--- a/docs-ref-autogen/azure-iothub/Query.yml
+++ b/docs-ref-autogen/azure-iothub/Query.yml
@@ -31,7 +31,7 @@ items:
     type: property
     summary: Token used to iterate over multiple pages of results.
     syntax:
-      content: string continuationToken
+      content: 'continuationToken: string'
       return:
         type:
           - string
@@ -45,7 +45,7 @@ items:
     type: property
     summary: Boolean indicating whether there are more results pages.
     syntax:
-      content: boolean hasMoreResults
+      content: 'hasMoreResults: boolean'
       return:
         type:
           - boolean
