--- a/docs-ref-autogen/azure-iothub/Registry.DeviceDescription.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.DeviceDescription.yml
@@ -20,7 +20,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string deviceId
+      content: 'deviceId: string'
       return:
         type:
           - string
