--- a/docs-ref-autogen/azure-iothub/Registry.DeviceRegistryOperationError.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.DeviceRegistryOperationError.yml
@@ -22,7 +22,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string deviceId
+      content: 'deviceId: string'
       return:
         type:
           - string
@@ -36,7 +36,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: Error errorCode
+      content: 'errorCode: Error'
       return:
         type:
           - Error
@@ -50,7 +50,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string errorStatus
+      content: 'errorStatus: string'
       return:
         type:
           - string
