--- a/docs-ref-autogen/azure-iothub/Registry.QueryDescription.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.QueryDescription.yml
@@ -20,7 +20,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string query
+      content: 'query: string'
       return:
         type:
           - string
