--- a/docs-ref-autogen/azure-iothub/Registry.RegistryStatistics.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.RegistryStatistics.yml
@@ -22,7 +22,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: number disabledDeviceCount
+      content: 'disabledDeviceCount: number'
       return:
         type:
           - number
@@ -36,7 +36,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: number enabledDeviceCount
+      content: 'enabledDeviceCount: number'
       return:
         type:
           - number
@@ -50,7 +50,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: number totalDeviceCount
+      content: 'totalDeviceCount: number'
       return:
         type:
           - number
