--- a/docs-ref-autogen/azure-iothub/Registry.TransportConfig.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.TransportConfig.yml
@@ -21,7 +21,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string host
+      content: 'host: string'
       return:
         type:
           - string
@@ -35,7 +35,7 @@ items:
     type: property
     summary: ''
     syntax:
-      content: string | SharedAccessSignature sharedAccessSignature
+      content: 'sharedAccessSignature: string | SharedAccessSignature'
       return:
         type:
           - string | SharedAccessSignature
