--- a/docs-ref-autogen/azure-iothub/index.yml
+++ b/docs-ref-autogen/azure-iothub/index.yml
@@ -24,13 +24,13 @@ items:
       - azure-iothub.Registry.RegistryStatistics
       - azure-iothub.Registry.TransportConfig
       - azure-iothub.Twin
-      - azure-iothub.parse
-      - azure-iothub.create
-      - azure-iothub.parse
+      - azure-iothub.global.parse
+      - azure-iothub.global.create
+      - azure-iothub.global.parse
     type: package
     langs:
       - typeScript
-  - uid: azure-iothub.parse
+  - uid: azure-iothub.global.parse
     name: parse
     children: []
     type: function
@@ -58,7 +58,7 @@ items:
       - type: azure-iot-common.ArgumentError
         description: |
           if the string is missing one of the required attributes.
-  - uid: azure-iothub.create
+  - uid: azure-iothub.global.create
     name: create
     children: []
     type: function
@@ -100,7 +100,7 @@ items:
       - type: ReferenceError
         description: |
           If one of the parameters is falsy.
-  - uid: azure-iothub.parse
+  - uid: azure-iothub.global.parse
     name: parse
     children: []
     type: function
