--- a/docs-ref-autogen/azure-iot-common/index.yml
+++ b/docs-ref-autogen/azure-iot-common/index.yml
@@ -56,19 +56,19 @@ items:
       - azure-iot-common.NoRetry
       - azure-iot-common.RetryPolicy
       - azure-iot-common.SharedAccessSignature
-      - azure-iot-common.global.anHourFromNow
-      - azure-iot-common.global.encodeUriComponentStrict
-      - azure-iot-common.global.hmacHash
-      - azure-iot-common.global.stringToSign
-      - azure-iot-common.global.devicePath
-      - azure-iot-common.global.eventPath
-      - azure-iot-common.global.feedbackPath
-      - azure-iot-common.global.messagePath
-      - azure-iot-common.global.versionQueryString
+      - azure-iot-common.anHourFromNow
+      - azure-iot-common.encodeUriComponentStrict
+      - azure-iot-common.hmacHash
+      - azure-iot-common.stringToSign
+      - azure-iot-common.devicePath
+      - azure-iot-common.eventPath
+      - azure-iot-common.feedbackPath
+      - azure-iot-common.messagePath
+      - azure-iot-common.versionQueryString
     type: package
     langs:
       - typeScript
-  - uid: azure-iot-common.global.anHourFromNow
+  - uid: azure-iot-common.anHourFromNow
     name: anHourFromNow
     children: []
     type: function
@@ -83,7 +83,7 @@ items:
       return:
         type:
           - number
-  - uid: azure-iot-common.global.encodeUriComponentStrict
+  - uid: azure-iot-common.encodeUriComponentStrict
     name: encodeUriComponentStrict
     children: []
     type: function
@@ -100,7 +100,7 @@ items:
       return:
         type:
           - string
-  - uid: azure-iot-common.global.hmacHash
+  - uid: azure-iot-common.hmacHash
     name: hmacHash
     children: []
     type: function
@@ -121,7 +121,7 @@ items:
       return:
         type:
           - string
-  - uid: azure-iot-common.global.stringToSign
+  - uid: azure-iot-common.stringToSign
     name: stringToSign
     children: []
     type: function
@@ -142,7 +142,7 @@ items:
       return:
         type:
           - string
-  - uid: azure-iot-common.global.devicePath
+  - uid: azure-iot-common.devicePath
     name: devicePath
     children: []
     type: function
@@ -159,7 +159,7 @@ items:
       return:
         type:
           - string
-  - uid: azure-iot-common.global.eventPath
+  - uid: azure-iot-common.eventPath
     name: eventPath
     children: []
     type: function
@@ -176,7 +176,7 @@ items:
       return:
         type:
           - string
-  - uid: azure-iot-common.global.feedbackPath
+  - uid: azure-iot-common.feedbackPath
     name: feedbackPath
     children: []
     type: function
@@ -197,7 +197,7 @@ items:
       return:
         type:
           - string
-  - uid: azure-iot-common.global.messagePath
+  - uid: azure-iot-common.messagePath
     name: messagePath
     children: []
     type: function
@@ -214,7 +214,7 @@ items:
       return:
         type:
           - string
-  - uid: azure-iot-common.global.versionQueryString
+  - uid: azure-iot-common.versionQueryString
     name: versionQueryString
     children: []
     type: function
