--- a/docs-ref-autogen/azure-iot-device/Client.Transport.yml
+++ b/docs-ref-autogen/azure-iot-device/Client.Transport.yml
@@ -373,8 +373,7 @@ items:
     syntax:
       content: >-
         function sendTwinRequest(method: string, resource: string, properties:
-        [key: string]: any, body: any, done?: (err?: Error, result?: any) =>
-        void)
+        function, body: any, done?: (err?: Error, result?: any) => void)
       parameters:
         - id: method
           type:
@@ -386,7 +385,7 @@ items:
           description: ''
         - id: properties
           type:
-            - '[key: string]: any'
+            - function
           description: ''
         - id: body
           type:
