--- a/docs-ref-autogen/azure-iot-common/AuthenticationProvider.yml
+++ b/docs-ref-autogen/azure-iot-common/AuthenticationProvider.yml
@@ -37,10 +37,10 @@ items:
     summary: ''
     syntax:
       content: >-
-        function getDeviceCredentials(callback: (err: Error, credentials:
+        function getDeviceCredentials(callback: (err: Error, credentials?:
         TransportConfig) => void)
       parameters:
         - id: callback
           type:
-            - '(err: Error, credentials: TransportConfig) => void'
+            - '(err: Error, credentials?: TransportConfig) => void'
           description: ''
