--- a/docs-ref-autogen/toc.yml
+++ b/docs-ref-autogen/toc.yml
@@ -91,6 +91,9 @@
     - uid: azure-iot-common.PreconditionFailedError
       name: PreconditionFailedError
       items: []
+    - uid: azure-iot-common.SecurityDeviceError
+      name: SecurityDeviceError
+      items: []
     - uid: azure-iot-common.ServiceUnavailableError
       name: ServiceUnavailableError
       items: []
@@ -223,6 +226,9 @@
     - uid: azure-iot-provisioning-device-amqp.AmqpWs
       name: AmqpWs
       items: []
+    - uid: azure-iot-provisioning-device-amqp.SaslTpm
+      name: SaslTpm
+      items: []
 - uid: azure-iot-provisioning-device-http
   name: azure-iot-provisioning-device-http
   items:
@@ -261,9 +267,6 @@
       items: []
     - uid: azure-iot-provisioning-device.RegistrationResult
       name: RegistrationResult
-      items: []
-    - uid: azure-iot-provisioning-device.TpmRegistrationInfo
-      name: TpmRegistrationInfo
       items: []
     - uid: azure-iot-provisioning-device.X509SecurityClient
       name: X509SecurityClient
