--- a/docs-ref-autogen/azure-iot-provisioning-device/RegistrationRequest.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/RegistrationRequest.yml
@@ -20,7 +20,7 @@ items:
     langs:
       - typeScript
     type: property
-    summary: true to foce re-registration
+    summary: true to force re-registration
     optional: true
     syntax:
       content: 'forceRegistration?: boolean'
